fixed nav on mobile

--- a/client/src/components/Nav/Nav.scss
+++ b/client/src/components/Nav/Nav.scss
@@ -15,26 +15,36 @@
     }
 
     .app__nav-items {
-      display: none;
+      display: flex;
       flex-direction: column;
       gap: 1rem;
-      text-align: center;
+      text-align: left;
+      font-size: 1.5rem;
       width: 100%;
-      position: absolute;
-      top: 60px; /* Adjust as needed */
-      left: 0;
+      height: 100vh; /* Use full viewport height */
+      position: fixed; /* Fixed position to cover the entire viewport */
+      top: 0;
+      right: -100%; /* Initially off-screen */
       background-color: white;
-      z-index: 1;
+      z-index: 100;
+      transition: right 0.3s ease; /* Smooth transition for sliding effect */
+      @media screen and (max-width: 500px) {
+        font-size: 1rem;
+      }
     }
-
+    .app__nav-close {
+      display: none;
+      border: none;
+      background-color: transparent;
+      border-radius: 1px solid transparent;
+    }
     &.mobile-menu-open {
       .app__nav-items {
-        display: flex;
+        right: 0; /* Slide in when the menu is open */
       }
     }
   }
 }
-
 .app__nav-mobile-icon {
   display: none; /* Hide by default on larger screens */
   cursor: pointer;
@@ -105,4 +115,21 @@
 .app__nav-rightItem select,
 .app__nav-right-dropDown select {
   padding: 5px; /* Adjust padding for select element */
+}
+
+.app__nav-close {
+  display: none;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+  cursor: pointer;
+
+  &.mobile-menu-open {
+    display: block;
+  }
+
+  @media screen and (max-width: 700px) {
+    display: flex;
+  }
 }
